# fusion360-mcp

./: .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
fusion_addin/FusionMCP/: FusionMCP.manifest  FusionMCP.py  bridge.py  commands.py  logutil.py  registry.py
mcp_server/: _version.py  fusion_client.py  pyproject.toml  scan.py  server.py  updater.py  viewer.py
scripts/: install.ps1
tests/: conftest.py  test_batch_refs.py  test_cache.py  test_commands_helpers.py  test_dispatch.py  test_electronics.py  test_framing.py  test_interaction.py  test_introspect.py  test_logutil.py  test_mesh_compare.py  test_parameters_csv.py  test_registry.py  test_scan.py  test_server_import.py  test_units.py  test_updater.py  test_viewer.py
