[project]
name = "fusion360-mcp"
version = "1.8.0"
description = "Model Context Protocol server for Autodesk Fusion 360"
requires-python = ">=3.10"
dependencies = [
    # 1.9+ carries tool annotations (readOnlyHint/destructiveHint); the server
    # degrades gracefully to plain tools on older SDKs (see _annot in server.py).
    # <2: mcp 2.0 (spec 2026-07-28) renames FastMCP to MCPServer and reworks the
    # low-level server — migrate deliberately, not via a silent pip upgrade.
    "mcp>=1.9.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Scan analysis for reverse engineering (scan_analyze/scan_sections/
# scan_deviation) — heavy, so opt-in. The server runs fine without them.
re = [
    "numpy>=1.26",
    "trimesh>=4.0",
    "pyransac3d>=0.6",
]

[tool.uv]
package = false
